--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -14,5 +14,8 @@ bind - split-window -v
 unbind '"'
 unbind %
 
+# Enable shortcut for synchronising All panes
+bind a setw synchronize-panes
+
 # Style
 set -g status off
