--- a/vscode/.config/Code/User/settings.json
+++ b/vscode/.config/Code/User/settings.json
@@ -8,8 +8,18 @@
     "files.trimFinalNewlines": true,
     "editor.formatOnPaste": true,
     "editor.snippetSuggestions": "top",
+    "editor.stickyScroll.enabled": true,
+    "terminal.integrated.profiles.linux": {
+        "zsh (login)": {
+            "path": zsh,
+            "args": ["--login"]
+        }
+    },
+    "terminal.integrated.defaultProfile.linux": "zsh (login)",
     "files.watcherExclude": {
         "**/venv/**": true
     },
-    "update.mode": "none"
+    "search.exclude": {
+        "**/venv/**": true
+    }
 }
