Add escape time prompt for tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,3 +20,5 @@ bind a setw synchronize-panes
 # Style
 set -g status off
 set -g default-terminal "screen-256color"
+# If escape sequences come up on screen use the following
+# set -g escape-time 500
