--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,11 +8,17 @@ bind-key C-a send-prefix -2
 # Increase number of lines recorded in terminal history
 set -g history-limit 5000
 
-# Split panes using | and -
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
+# Use vim-like pane navigation
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind v split-window -v
+unbind s # Lists sessions, can be seen with prefix+w anyway
+bind s split-window -h
+
+bind = select-layout -n
 
 # Enable shortcut for synchronising All panes
 bind a setw synchronize-panes
