Swap tmux split commands around to be consistent with vim

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,9 +14,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind v split-window -v
+bind v split-window -h
 unbind s # Lists sessions, can be seen with prefix+w anyway
-bind s split-window -h
+bind s split-window -v
 
 bind = select-layout -n
 
