Use tmux-256color

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,6 +25,4 @@ bind a setw synchronize-panes
 
 # Style
 set -g status off
-set -g default-terminal "screen-256color"
-# If escape sequences come up on screen use the following
-# set -g escape-time 500
+set -g default-terminal "tmux-256color"
