--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,6 +8,12 @@ bind-key C-a send-prefix -2
 # Increase number of lines recorded in terminal history
 set -g history-limit 5000
 
+# Style and terminal support
+set -g status off
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",xterm*:Tc:RGB"
+set -ga terminal-overrides ",*256col*:Tc:RGB"
+
 # Use vim-like pane navigation
 bind h select-pane -L
 bind j select-pane -D
@@ -22,7 +28,3 @@ bind = select-layout -n
 
 # Enable shortcut for synchronising All panes
 bind a setw synchronize-panes
-
-# Style
-set -g status off
-set -g default-terminal "tmux-256color"
